2025-05-26 ------------------------------------------------------------------------------------------------------------
* various cleanups,  renamed a .doc, got rid of some stale files,  fixed a .gitignore, etc...
* fixed some old license references to Apache  --> AGPLv3
* turned what was FG.DCH_BASE into a real importable class in the new html/modules/classes directory

2025-05-25 ------------------------------------------------------------------------------------------------------------
* finished the DocFileFormat 1.1.odt documentation
* wrote and added a DFListenerTracker class and added it to DCH_BASE so all plugins can use it as a clean way to add
    and remove listeners, which will automatically be removed when the plugin is .destroy()'ed.
* removed addTrackedListener(), removeTrackedListenerById() and removeAllTrackedListeners() from fem_core_Functions.js
* minor cleanups

 2025-05-24 ------------------------------------------------------------------------------------------------------------
* DCH_BASE .loadCss is now .loadStyle(str) and it now supports a str of "<style>...</style>" or a URL path to a .css file
* DFDialog has also been significantly tweaked to allow styles to be applied in a similar manner as DCH_BASE now does
* DFContextMenu and DFMenuBar now accept the cssList as part of the class constructor, but otherwise operates the 
    same as DFDialog does now.
* further reworking of DFDialog, changed the params to open() to always be a dict.  Just adds much more flexibility!
* doing the same for DFContextMenu and DFMenuBar which adds the bonus of allowing DFMenuBar to pass a different 
    list of stylesheets to DFContextMenu, which it wasn't able to do before
* changed internal version to 1.1 so docImporter can handle a new storage format that now allows for many 'true' datatypes
    to be stored rather than everything-must-be-a-key-value-STRING-pair
* the new JLPAINT plugin is working!   