@@ -1,1 +1,0 @@
-,dev,tiger,26.05.2025 04:18,file:///home/dev/.config/libreoffice/4;
